Fix stretched footer logo by adding width: auto

--- a/css/styles.css
+++ b/css/styles.css
@@ -1270,6 +1270,7 @@ p {
 
 .footer-brand img {
   height: 45px;
+  width: auto;
   margin-bottom: 1rem;
 }
 
